0.1/src/objects/BlogEntry__c.object
<CustomObject>
    <fields>
        <fullName>CommentCount__c</fullName>
        <label>Comment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostedBy__c</fullName>
        <label>Posted By</label>
        <referenceTo>User</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDate__c</fullName>
        <label>Posted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <label>PublishedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Blog</label>
    <nameField>
        <label>Blog</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>